# python-chatbot-synochat

./: .gitignore  README.md  pyproject.toml
synochat/: bot_autopal.py  i.py  server.py  service_conf_template.py  service_study.py
synochat/api/: chat.py
synochat/model/: chat_event.py  lc.py  subscribe.py  syno.py
synochat/req/: chat.py  daily.py
synochat/service/: __init__.py  _autopal.py  _study.py  autopal.py  reminder.py  study.py
